--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,28 @@
     <artifactId>csc445hw01</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+
+    <build>
+        <plugins>
+            <plugin>
+
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>src/main/java/Main</mainClass>
+                        </manifest>
+                    </archive>
+
+
+                </configuration>
+
+
+            </plugin>
+        </plugins>
+    </build>
+
+
 </project>
